# block-detached-commit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: changelog.yml  ci.yml  release.yml
go/: go.mod
go/cmd/block-detached-commit/: main.go
npm/: package.json
npm/scripts/: postinstall.js
scripts/: release.sh
src/: main.rs
