[package]
name = "block-detached-commit"
version = "0.1.4"
edition = "2021"
description = "Git pre-commit hook that blocks commits in detached HEAD state"
license = "MIT"
repository = "https://github.com/tupe12334/block-detached-commit"
homepage = "https://github.com/tupe12334/block-detached-commit"
keywords = ["git", "hook", "pre-commit", "detached-head"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "block-detached-commit"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
manual_let_else = "warn"
# Forbid `.unwrap()` in production code: a panic in a pre-commit hook aborts with
# an opaque message and the panic exit code instead of the deliberate, actionable
# errors and exit codes this tool reports. Test code is exempt (see the
# `cfg_attr(test, allow(...))` at the top of src/main.rs).
unwrap_used = "deny"
# `.expect()` panics exactly like `.unwrap()`, just with a custom message, so in a
# pre-commit hook it produces the same opaque panic abort instead of this tool's
# deliberate error reporting and exit codes. Deny it for production code to close
# the gap left by `unwrap_used`; test code is exempt (see the `cfg_attr(test,
# allow(...))` at the top of src/main.rs).
expect_used = "deny"
needless_pass_by_value = "warn"
option_if_let_else = "warn"
# Flag functions that return `Result`/`Option` but never produce `Err`/`None`.
# Such wrappers advertise a failure mode that cannot occur and force every caller
# into needless `?`/`unwrap`/`match` ceremony. The crate is clean today, so this
# acts as a regression guard keeping helper signatures honest.
unnecessary_wraps = "deny"
# Flag `match` blocks that contain two or more arms with identical bodies.
# These are usually a copy-paste slip or arms that should be merged with `|`.
# Catching them keeps `match` expressions DRY and surfaces accidental
# duplicate handling that can hide logic bugs.
match_same_arms = "warn"
# Flag `opt.map(f).unwrap_or(default)` / `.unwrap_or_else(..)` chains that read
# more clearly as a single `map_or` / `map_or_else`. This crate already prefers
# the `map_or_else` form (see `build_hook_content`), so enabling the lint keeps
# `Option`/`Result` handling consistent and avoids the longer two-call idiom.
map_unwrap_or = "warn"
# Flag closures that only forward their argument to a single method call, e.g.
# `.map(|s| s.as_str())` where `.map(String::as_str)` reads more directly. The
# crate already prefers the method-reference form (see the `String::as_str` in
# `main`), so enabling this keeps closures from creeping back in and surfaces the
# shorter, intent-revealing spelling.
redundant_closure_for_method_calls = "warn"
# Flag patterns that bind the unit type `()` with a wildcard `_` instead of the
# explicit `()` pattern, e.g. `Ok(_)` / `if let Ok(_) = f()` where the success
# value is unit. Writing `Ok(())` documents that the call yields nothing and lets
# the type checker catch the day a `()`-returning call starts returning real data
# (the wildcard would silently keep swallowing it). This crate threads several
# `Result<(), _>` IO calls (`fs::write`, `fs::set_permissions`, `fs::remove_file`),
# so the lint keeps their unit results spelled out and intent-revealing.
ignored_unit_patterns = "warn"
