[package]
name = "block-detached-commit"
version = "0.1.4"
edition = "2021"
description = "Git pre-commit hook that blocks commits in detached HEAD state"
license = "MIT"
repository = "https://github.com/tupe12334/block-detached-commit"
homepage = "https://github.com/tupe12334/block-detached-commit"
keywords = ["git", "hook", "pre-commit", "detached-head"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "block-detached-commit"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
# Flag any `dbg!(...)` macro left in the source. `dbg!` writes to stderr and is a
# debugging aid that should never ship: in this pre-commit hook it would pollute
# the tool's deliberate, structured stderr output and leak into users' commit
# runs. The crate is free of `dbg!` today, so denying it acts as a regression
# guard that keeps stray debug prints out of releases.
dbg_macro = "deny"
manual_let_else = "warn"
semicolon_if_nothing_returned = "warn"
# Forbid `.unwrap()` in production code: a panic in a pre-commit hook aborts with
# an opaque message and the panic exit code instead of the deliberate, actionable
# errors and exit codes this tool reports. Test code is exempt (see the
# `cfg_attr(test, allow(...))` at the top of src/main.rs).
unwrap_used = "deny"
# `.expect()` panics exactly like `.unwrap()`, just with a custom message, so in a
# pre-commit hook it produces the same opaque panic abort instead of this tool's
# deliberate error reporting and exit codes. Deny it for production code to close
# the gap left by `unwrap_used`; test code is exempt (see the `cfg_attr(test,
# allow(...))` at the top of src/main.rs).
expect_used = "deny"
needless_pass_by_value = "warn"
# A reachable `panic!`/`unreachable!`/`todo!`/`unimplemented!` aborts the
# pre-commit hook with an opaque panic message and the panic exit code instead
# of the deliberate, actionable errors and exit codes this tool reports — the
# same failure mode already closed off by denying `unwrap_used`/`expect_used`.
# Deny the panicking macros in production code so every error path stays an
# explicit `eprintln!` + `process::exit`. Test code legitimately panics to
# assert invariants, so it is exempt (see the `cfg_attr(test, allow(...))` at
# the top of src/main.rs).
panic = "deny"
# `unreachable!()` is a panicking macro: hitting one in production aborts the
# pre-commit hook with the same opaque panic message and exit code that
# `unwrap_used`, `expect_used`, and `panic` are already denied to prevent. The
# comment for `panic` above already lists `unreachable!` as a macro to avoid, but
# `clippy::panic` only covers `panic!()` itself — each panicking macro has its own
# restriction lint. Adding `unreachable = "deny"` closes that gap: every control
# flow path that "cannot happen" must be expressed as an explicit error return
# rather than a runtime abort. The crate has no `unreachable!()` calls today, so
# this acts as a regression guard.
unreachable = "deny"
option_if_let_else = "warn"
# Flag functions that return `Result`/`Option` but never produce `Err`/`None`.
# Such wrappers advertise a failure mode that cannot occur and force every caller
# into needless `?`/`unwrap`/`match` ceremony. The crate is clean today, so this
# acts as a regression guard keeping helper signatures honest.
unnecessary_wraps = "deny"
# Flag `match` blocks that contain two or more arms with identical bodies.
# These are usually a copy-paste slip or arms that should be merged with `|`.
# Catching them keeps `match` expressions DRY and surfaces accidental
# duplicate handling that can hide logic bugs.
match_same_arms = "warn"
# Flag or-patterns written nested instead of merged at the deepest common level,
# e.g. `Some("a") | Some("b")` where `Some("a" | "b")` reads tighter. Keeps a
# single arm with one or-pattern instead of repeating the outer constructor per
# alternative — the same DRY/intent-revealing goal as `match_same_arms`. The
# crate is clean today (the `None | Some("check")` arm in `main` is already in
# its tightest form), so this acts as a regression guard against un-merged
# or-patterns creeping in.
unnested_or_patterns = "warn"
# Flag `opt.map(f).unwrap_or(default)` / `.unwrap_or_else(..)` chains that read
# more clearly as a single `map_or` / `map_or_else`. This crate already prefers
# the `map_or_else` form (see `build_hook_content`), so enabling the lint keeps
# `Option`/`Result` handling consistent and avoids the longer two-call idiom.
map_unwrap_or = "warn"
# Flag closures that only forward their argument to a single method call, e.g.
# `.map(|s| s.as_str())` where `.map(String::as_str)` reads more directly. The
# crate already prefers the method-reference form (see the `String::as_str` in
# `main`), so enabling this keeps closures from creeping back in and surfaces the
# shorter, intent-revealing spelling.
redundant_closure_for_method_calls = "warn"
# Flag an `else` block whose preceding `if` branch always diverges (ends in
# `return`/`break`/`continue` or a never-returning call). The `else` is then
# dead weight: its body can be de-indented to the enclosing scope, turning the
# construct into a flat guard clause. The crate is clean today, so this acts as
# a regression guard keeping control flow shallow and the happy path readable.
redundant_else = "warn"
# Flag `if !cond { a } else { b }` where the negated condition forces the reader
# to mentally invert it before reaching the body in the `else` arm. Swapping to
# `if cond { b } else { a }` puts the positive case first and reads more directly.
# The crate is clean today, so this guards against negated-`if` branches creeping
# into the control flow this tool relies on for its exit-code decisions.
if_not_else = "warn"
# Flag patterns that bind the unit type `()` with a wildcard `_` instead of the
# explicit `()` pattern, e.g. `Ok(_)` / `if let Ok(_) = f()` where the success
# value is unit. Writing `Ok(())` documents that the call yields nothing and lets
# the type checker catch the day a `()`-returning call starts returning real data
# (the wildcard would silently keep swallowing it). This crate threads several
# `Result<(), _>` IO calls (`fs::write`, `fs::set_permissions`, `fs::remove_file`),
# so the lint keeps their unit results spelled out and intent-revealing.
ignored_unit_patterns = "warn"
# Flag `&s[a..b]` byte-range slicing of a `str`/`String`. Such slicing panics at
# runtime if a boundary falls inside a multi-byte UTF-8 char or runs past the end
# — the exact opaque-panic failure mode this crate already forbids via
# `unwrap_used`, `expect_used`, `panic` and `indexing_slicing`. A pre-commit hook
# parses git paths and config text (which can contain non-ASCII), so a stray
# string slice could abort the hook with a panic instead of a deliberate error +
# exit code. The crate uses no string slicing today, so `deny` (matching the rest
# of the panic-safety family) locks in that clean state and pushes any future need
# toward charwise APIs (`char_indices`, `split`, `strip_prefix`, `get(a..b)`).
string_slice = "deny"
# Flag bare integer arithmetic (`+`, `-`, `*`, `<<`, …) that can overflow. In
# debug builds an overflow panics; in release builds it silently wraps to a
# wrong value. That panic is the same opaque-abort failure mode this crate
# already forbids via `unwrap_used`, `expect_used`, `panic` and `string_slice`:
# in a pre-commit hook it kills the commit with a cryptic panic message and the
# panic exit code instead of this tool's deliberate error + exit code. The crate
# does no bare arithmetic today, so `deny` (matching the rest of the panic-safety
# family) locks in that clean state and pushes any future arithmetic toward an
# explicit overflow strategy (`checked_*`, `saturating_*`, `wrapping_*`).
arithmetic_side_effects = "deny"
